🌋💅 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     </div>
   
   <div class="result"></div>
+  <br>
+  <button class="replay">Replay</button>
   
   <!-- Link JQuery here -->
   <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
